notebook: date granularities

--- a/parse_centraal_museum_notebook.ipynb
+++ b/parse_centraal_museum_notebook.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9f6b77c883467f3a828444ddf87761b0a3b7a38231769a958954c67b03d5bc58"
+  "signature": "sha256:d5a8fa3e7fd31e6b4a80fd29a3d184dbd12628258ae1ab0f3d558c59d1637077"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -69,6 +69,193 @@
       }
      ],
      "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import datetime\n",
+      "import re\n",
+      "\n",
+      "# Granularities\n",
+      "regexen = {\n",
+      "    '\\?$' : (0, lambda _ : None),\n",
+      "    '(\\d\\d)[\\?]+$' : (2, lambda (y,) : datetime.date(int(y+'00'), 1, 1)),\n",
+      "    '(\\d\\d\\d)\\?$' : (3, lambda (y,) : datetime.date(int(y+'0'), 1, 1)),\n",
+      "    '(\\d\\d\\d\\d) ?- ?\\d\\d\\d\\d$' : (3, lambda (y,) : datetime.date(int(y), 1, 1)),\n",
+      "    '(\\d\\d\\d0)[\\?() ]+$' : (3, lambda (y,) : datetime.date(int(y), 1, 1)),\n",
+      "    # 'yyyy?' will still have a date granularity of 4\n",
+      "    '(\\d\\d\\d\\d)[\\?() ]+$' : (4, lambda (y,) : datetime.date(int(y), 1, 1)),\n",
+      "    '(\\d+)$' : (4, lambda (y,) : datetime.date(int(y), 1, 1)),\n",
+      "    '(\\d\\d\\d\\d)-(\\d\\d)$' : (6, lambda (y,m) : datetime.date(int(y), int(m), 1)),\n",
+      "    '(\\d\\d\\d\\d)-(\\d\\d)-(\\d\\d)$' : (8, lambda (y,m,d) : datetime.date(int(y), int(m), int(d))),\n",
+      "}\n",
+      "def parse_date(date_str):\n",
+      "    \"\"\" Parse a messy string into a granular date \"\"\"\n",
+      "    if date_str:\n",
+      "        for reg, (gran, dater) in regexen.items():\n",
+      "            m = re.match(reg, date_str)\n",
+      "            if m:\n",
+      "                return gran, dater(m.groups())\n",
+      "    return None, None\n",
+      "\n",
+      "def parse_date_span(date_str1, date_str2):\n",
+      "    \"\"\" Parse a start & end date into a (less) granular date\"\"\"\n",
+      "    pds_gran, pds = parse_date(pds_text)\n",
+      "    pde_gran, pde = parse_date(pde_text)\n",
+      "\n",
+      "    if pde:\n",
+      "        # TODO: integrate both granularities\n",
+      "        if (pds_gran, pds) == (pde_gran, pde):\n",
+      "            return pds_gran, pds\n",
+      "        if (pde - pds).days < 5*365:\n",
+      "            return 4, pds\n",
+      "        if (pde - pds).days < 50*365:\n",
+      "            return 3, pds\n",
+      "        if (pde - pds).days >= 50*365:\n",
+      "            return 2, pds\n",
+      "    else:\n",
+      "        return pds_gran, pds\n",
+      "\n",
+      "for record in tree.getroot().iter('record'):\n",
+      "    if record.find('production.date.start') is not None:\n",
+      "        pds_text = record.find('production.date.start').text\n",
+      "        pde_text = record.find('production.date.end').text\n",
+      "        \n",
+      "        pd_gran, pd = parse_date_span(pds_text, pde_text)\n",
+      "        if (pds_text and ('?' in pds_text)) or (pde_text and ('?' in pde_text)):\n",
+      "            print pd_gran, pd, (pds_text, pde_text)\n",
+      "            \n",
+      "        "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "3 1780-01-01 ('1780?', '1780?')\n",
+        "4 1805-01-01 ('1805 (?)', None)\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " None ('?', '?')\n",
+        "0"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " None ('?', None)\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "2"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1900-01-01 ('19?', '19?')\n",
+        "0 None ('?', '?')\n",
+        "4 1809-01-01 ('1809', '1810 (?)')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " None ('?', None)\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', None)\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "3 1920-01-01 ('192?', '192?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "0 None ('?', '?')\n",
+        "3 1930-01-01 ('1930?', '1940?')\n",
+        "3 1930-01-01 ('1930(?)', '1940(?)')\n",
+        "3 1930-01-01 ('1930?', '1940?')\n",
+        "0 None ('?', '?')\n",
+        "3"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1960-01-01 ('196?', '196?')\n",
+        "4 1948-01-01 ('1948 (?)', None)\n"
+       ]
+      }
+     ],
+     "prompt_number": 279
     },
     {
      "cell_type": "code",
